# mpiNN

./: .gitignore.txt  CMakeLists.txt  a.out  ffn.cpp  matrix.cpp  test.cpp  train.cpp  utils.cpp  utils.hpp
layers/: cross_entropy.cpp  layer.hpp  linear.cpp  relu.cpp  sigmoid.cpp  softmax.cpp
